crates/axiom-typeck/tests/fixtures/errors/return_type_mismatch.ax
fn main() -> Int { 3.14 }